# textmiditools

./: AUTHORS  AllFormsWindow.py  Arrangements.cc  Arrangements.h  ChangeLog  Composer.cc  Composer.h  DynamicsOptions.cc  DynamicsOptions.h  FormFrame.py  GeneralMIDI.cc  GeneralMIDI.h  GeneralMIDI.py  GeneralMIDIRandom.cc  GeneralMIDIRandom.h  GeneralMidi.py  GnuPlot.cc  GnuPlot.h  HeapsAlgorithmTemplate.h  KeyboardWindow.py  KeyboardWindowscroll.py  MIDIKeyString.cc  MIDIKeyString.h  Makefile  Makefile.am  Makefile.in  Midi.cc  Midi.h  MidiEvents.cc  MidiEvents.h  MidiMaps.cc  MidiMaps.h  MidiMessages.cc  MidiMessages.h  MidiString.cc  MidiString.h  MusicalForm.cc  MusicalForm.h  NEWS  NoteEvent.cc  (+68 more)
examples/textmidi/beethoven_9th2/: README  lvb9_2.m4  lvb9_2.make  lvb9_2.mid  lvb9_2.txt  lvb9_2bridge2_piano1.m4  lvb9_2bridge2_piano2.m4  lvb9_2bridge2_tempo.m4  lvb9_2bridge_piano1.m4  lvb9_2bridge_piano2.m4  lvb9_2bridge_tempo.m4  lvb9_2coda_piano1.m4  lvb9_2coda_piano2.m4  lvb9_2coda_tempo.m4  lvb9_2ending_piano1.m4  lvb9_2ending_piano2.m4  lvb9_2ending_tempo.m4  lvb9_2fanfare_piano1.m4  lvb9_2fanfare_piano2.m4  lvb9_2fanfare_tempo.m4  lvb9_2repeat1_piano1.m4  lvb9_2repeat1_piano2.m4  lvb9_2repeat1_tempo.m4  lvb9_2repeat2_piano1.m4  lvb9_2repeat2_piano2.m4  lvb9_2repeat2_tempo.m4  lvb9_2repeat3_piano1.m4  lvb9_2repeat3_piano2.m4  lvb9_2repeat3_tempo.m4  lvb9_2repeat4_piano1.m4  lvb9_2repeat4_piano2.m4  lvb9_2repeat4_tempo.m4
examples/textmidi/beethoven_grosse_fuge/: README  grossefuge.click.m4  grossefuge.m4  grossefuge.make  grossefuge.mid  grossefuge.primolh.m4  grossefuge.primorh.m4  grossefuge.secondolh.m4  grossefuge.secondorh.m4  grossefuge.secondorhextra.m4  grossefuge.tempo.m4  grossefuge.trills.m4  grossefuge.txt  instruments.m4  percussion.m4
examples/textmidi/beethoven_grosse_fuge_idio/: README  grossefuge.click.m4  grossefuge.m4  grossefuge.make  grossefuge.mid  grossefuge.primolh.m4  grossefuge.primorh.m4  grossefuge.secondolh.m4  grossefuge.secondorh.m4  grossefuge.secondorhextra.m4  grossefuge.trills.m4  grossefuge.txt  grossefugeidio.make  grossefugeidio.mid  percussion.sed
examples/textmidi/beethoven_grosse_fuge_perc/: README  grossefuge.m4  grossefuge.make  grossefuge.mid  grossefuge.primolh.m4  grossefuge.primorh.m4  grossefuge.secondolh.m4  grossefuge.secondorh.m4  grossefuge.secondorhextra.m4  grossefuge.tempo.m4  grossefuge.trills.m4  grossefugeperc.make  grossefugeperc.mid  grossefugeperc.txt  grossefugeperc3d.make  instruments.m4  percussion.m4
examples/textmidi/schumann_quintet/: README  instruments.m4  makeplain.com  percussion.m4  schuqnt.make  schuqnt1.m4  schuqnt1.mid  schuqnt1.txt  schuqnt1click.txt  schuqnt1ped.txt  schuqnt1pl.txt  schuqnt1pr.txt  schuqnt1pt.txt  schuqnt1tempo.txt  schuqnt1v1.txt  schuqnt1v2.txt  schuqnt1va.txt  schuqnt1vc.txt  schuqnt2.m4  schuqnt2.mid  schuqnt2.txt  schuqnt2click.txt  schuqnt2pl.txt  schuqnt2pr.txt  schuqnt2pt.txt  schuqnt2tempo.txt  schuqnt2v1.txt  schuqnt2v2.txt  schuqnt2va.txt  schuqnt2vc.txt  schuqnt2vc2.txt  schuqnt3.m4  schuqnt3.mid  schuqnt3.txt  schuqnt3click.txt  schuqnt3d.make  schuqnt3pl.txt  schuqnt3pr.txt  schuqnt3pt.txt  schuqnt3tempo.txt  (+17 more)
examples/textmidicgm/Demo1993/: 20fastwalk.bc  20fastwalk.xml  Animations.xml  Animations_v0.xml  Animations_v2.xml  Animations_v2_v2.xml  Animations_v3_v2.xml  Animations_v3_v3.xml  Makefile  README  arrangement.txt  concerto.xml  drums.xml  fasthira.xml  fastpure.xml  fastwalk.xml  gamelan.xml  harmonics.xml  heavenhigh.xml  heavenlow.xml  koto.xml  lucy.xml  opentheflute.xml  philfisa.xml  test.xml  wholetruth.xml  windoctet.xml
examples/textmidicgm/misc/: Makefile  README  addincludes.sed  audiofst.xml  audiotst.xml  bottlpop.xml  commu9.xml  ctborch.xml  ctopiano.xml  fastqtt.xml  (+21 more)
test/: 3dtest.txt  README  TestReport.txt  TestReport20250407.txt  TestReport20250612.txt  TestReport20250704.txt  TestReport20250710.txt  TestReport20260330.txt  TestReport20260504.txt  TestReport20260529.txt  TestReport20260701.txt  TestReport20260714.txt  chorded.com  chorded.txt  chorded2.txt  chorded3.txt  classical_archives0.txt  classical_archives1.txt  classical_archives2.txt  classical_archives3.txt  classical_archives4.txt  classical_archives5.txt  classical_archives6.txt  classical_archives_never.txt  classical_archives_never0.txt  classical_archives_never1.txt  classical_archives_never2.txt  classical_archives_never3.txt  classical_archives_never4.txt  classical_archives_never5.txt  classical_archives_never6.txt  classical_archives_otherfails.txt  classical_archives_rigid0.txt  classical_archives_rigid1.txt  classical_archives_rigid2.txt  classical_archives_rigid3.txt  eventtests.txt  hires.com  hires.txt  lazytie.txt  (+27 more)
test/textmidicgm/: Makefile  README  cgm_test.make  cgm_test_arrangement_definition_algorithm_a.xml  cgm_test_arrangement_definition_algorithm_b.xml  cgm_test_arrangement_definition_period_a.xml  cgm_test_arrangement_definition_period_b.xml  cgm_test_beat_a.xml  cgm_test_beat_b.xml  cgm_test_beat_c.xml  cgm_test_copyright_a.xml  cgm_test_dynamic_form_mean_amplitude_a.xml  cgm_test_dynamic_form_mean_offset_a.xml  cgm_test_dynamic_form_mean_period_a.xml  cgm_test_dynamic_form_mean_period_b.xml  cgm_test_dynamic_form_mean_period_c.xml  cgm_test_dynamic_form_mean_phase_a.xml  cgm_test_dynamic_form_mean_phase_b.xml  cgm_test_dynamic_form_mean_phase_c.xml  cgm_test_dynamic_form_range_amplitude_a.xml  cgm_test_dynamic_form_range_offset_a.xml  cgm_test_dynamic_form_range_period_a.xml  cgm_test_dynamic_form_range_period_b.xml  cgm_test_dynamic_form_range_period_c.xml  cgm_test_dynamic_form_range_phase_a.xml  cgm_test_dynamic_form_range_phase_b.xml  cgm_test_dynamic_form_range_phase_c.xml  cgm_test_len_a.xml  cgm_test_len_b.xml  cgm_test_max_note_len_a.xml  cgm_test_max_note_len_b.xml  cgm_test_melody_probabilities_a.xml  cgm_test_melody_probabilities_b.xml  cgm_test_melody_probabilities_c.xml  cgm_test_melody_probabilities_d.xml  cgm_test_meter_a.xml  cgm_test_meter_b.xml  cgm_test_meter_c.xml  cgm_test_min_note_len_a.xml  cgm_test_min_note_len_b.xml  (+101 more)
(+14 files in other folders)
